[package]
name = "imgui"
version = "0.0.12-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
description = "Experimental bindings to ocornut/imgui"
readme = "README.markdown"
homepage = "https://github.com/gekkio/imgui-rs"
repository = "https://github.com/gekkio/imgui-rs"
license = "MIT OR Apache-2.0"
categories = ["gui", "api-bindings"]

[dependencies]
imgui-sys = { path = "imgui-sys" }

[dev-dependencies]
cgmath = "0.7"
gfx = "0.14"
gfx_window_glutin = "0.14"
glium = "0.16"
glutin = "0.7"
imgui-gfx-renderer = { path = "imgui-gfx-renderer" }
imgui-glium-renderer = { path = "imgui-glium-renderer" }
