[package]
name = "imgui-gfx-renderer"
version = "0.0.12-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
description = "gfx renderer for imgui-rs"
homepage = "https://github.com/gekkio/imgui-rs"
repository = "https://github.com/gekkio/imgui-rs"
license = "MIT OR Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
gfx = "0.14"
imgui = { path = "../" }
imgui-sys = { path = "../imgui-sys", features = ["gfx"] }
